# lalr1

./: .gitignore  CITATION.cff  CMakeLists.txt  FindLibLalr1.cmake  README.md
examples/diff/: diff.cpp  grammar.cpp  grammar.h  parsergen.cpp
examples/diff_py/: diff.py  ids.py  lexer.py  tablegen.py
examples/expr/: expr.cpp  expr_grammar.cpp  expr_grammar.h  expr_simple.cpp  grammar.cpp  grammar.h  parsergen.cpp  printer.cpp  printer.h
examples/expr_java/: Expr.java  ExprTest.java  Lexer.java  TableGenerator.java
examples/expr_jl/: expr.jl  ids.jl  lexer.jl
examples/expr_js/: expr.js  ids.js  lexer.js
examples/expr_py/: expr.py  lexer.py  tablegen.py
examples/expr_rs/: common.rs  idents.rs  lexer.rs  parser.rs  parsergen.rs  run_expr.rs
examples/script/: ast.h  ast_asm.cpp  ast_asm.h  ast_opt.cpp  ast_opt.h  ast_printer.cpp  grammar.cpp  grammar.h  grammar_common.cpp  grammar_common.h  lexer.cpp  lexer.h  parsergen.cpp  script.cpp  script_grammar.cpp  script_grammar.h  sym.h
examples/script_vm/: main.cpp  vm.cpp  vm.h  vm_extfuncs.cpp
src/core/: ast.h  closure.cpp  closure.h  collection.cpp  collection.h  common.h  conflicts.cpp  conflicts.h  element.cpp  element.h  genoptions.cpp  genoptions.h  options.cpp  options.h  parser.cpp  parser.h  parsergen.cpp  parsergen.h  stack.h  symbol.cpp  symbol.h  table.h  tableexport.cpp  tableexport.h  tablegen.cpp  tablegen.h  timer.h  types.h
src/examples/diff_py/: diff.py  ids.py  tablegen.py
src/examples/expr/: expr.cpp  expr_grammar.cpp  expr_grammar.h  expr_parsergen.cpp  expr_simple.cpp
src/examples/expr_java/: Expr.java  ExprTest.java  Ids.java  Lexer.java  TableGen.java
src/examples/expr_js/: expr.js  lexer.js
src/examples/expr_py/: expr.py  ids.py  lexer.py  parser.py  parsergen.py  tablegen.py
src/examples/expr_rs/: common.rs  lexer.rs  parser.rs  parsergen.rs  run_expr.rs  types.rs
src/examples/script/: ast.h  ast_asm.cpp  ast_asm.h  ast_printer.cpp  ast_printer.h  lexer.cpp  lexer.h  lval.h  script.cpp  script_grammar.cpp  script_grammar.h  script_parsergen.cpp  sym.cpp  sym.h
src/examples/script_tests/: fac.scr
src/examples/script_vm/: helpers.h  main.cpp  types.h  vm_extfuncs.cpp
src/export/: tableexport.cpp  tableexport.h  tableexport_java.cpp  tableexport_java.h  tableexport_json.cpp  tableexport_json.h  tableexport_rs.cpp  tableexport_rs.h  tableexport_toml.cpp  tableexport_toml.h
src/expr/: expr.cpp  expr_grammar.cpp  expr_grammar.h  expr_parsergen.cpp  expr_simple.cpp
src/java/: Parser.java  ParserGen.java  ParserInterface.java  SemanticRuleInterface.java  Symbol.java
src/js/: parsergen.js
src/lalr1/: ast.h  closure.cpp  closure.h  collection.cpp  collection.h  common.h  element.cpp  element.h  options.cpp  options.h  parser.cpp  parser.h  parsergen.cpp  stack.h  symbol.cpp  symbol.h  table.h  tableexport.cpp  tablegen.cpp  timer.h  types.h
src/lalr1_java/: LALR1Tables.java  Parser.java  SemanticRule.java
src/lalr1_js/: parser.js  parsergen.js
src/lalr1_py/: lalr1.i  parser.py  parsergen.py
src/modules/: compile.txt  lalr1.i  notes.txt
src/modules/java/: Parser.java  ParserGen.java  ParsingTables.java
src/modules/js/: parser.js
src/modules/lalr1_java/: ActiveRule.java  Func0Args.java  Func1Arg.java  Func2Args.java  Parser.java  ParserGen.java  ParserInterface.java  ParsingTableInterface.java  SemanticRuleInterface.java  Symbol.java
src/modules/lalr1_jl/: parser.jl  parsergen.jl  tables.jl
src/modules/lalr1_js/: parser.js  parsergen.js
src/modules/lalr1_py/: parser.py  parsergen.py  tables.py
src/modules/lalr1_rs/: common.rs  parser.rs  parsergen.rs
src/modules/py/: parsergen.py
src/py/: lalr1.i  parser.py  parsergen.py
src/script/: ast.h  ast_asm.cpp  ast_asm.h  ast_printer.cpp  ast_printer.h  expr.cpp  expr_grammar.cpp  expr_grammar.h  expr_simple.cpp  lexer.cpp  lexer.h  lval.h  script.cpp  script_grammar.cpp  script_grammar.h  script_parsergen.cpp  sym.h
src/script_vm/: main.cpp  opcodes.h  types.h  vm.cpp  vm.h  vm_extfuncs.cpp
